--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -1,54 +1,58 @@
 <mat-card [style.backgroundColor]="getBGColour(item.importance)" class="breakage-card" *ngFor="let item of breakages">
-  <mat-card-header>
-    <img *ngIf="getBoatName(item.boatID)" mat-card-avatar src="assets/images/boat_{{item.boatID}}.webp" alt={{getBoatName(item.boatID)}} />
-    <mat-card-title><b>{{getBoatName(item.boatID)}}</b><br /></mat-card-title>
-    <mat-card-subtitle>{{getImportanceName(item.importance)}}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <div fxLayout="row" fxLayout.lt-md="column" fxFlex>
-      <div class="breakage-card-left">
-        <ul class="breakage-card-list">
-          <li *ngIf="item.part">
-            <b>Part:</b> {{item.part}}
-          </li>
-          <li>
-            <b>Reported by:</b> {{item.name}}
-          </li>
-          <li>
-            {{item.contact}}
-          </li>
-          <li *ngIf="item.timestamp">
-            <b>Reported:</b> {{dateDisplay(item.timestamp)}}
-          </li>
-          <li *ngIf="item.timestampFixed">
-            <b>Fixed:</b> {{dateDisplay(item.timestampFixed)}}
-          </li>
-        </ul>
-      </div>
 
-      <div fxFlex>
-        <p class="breakage-card-details">
-          <b>Details:</b> <br /> {{item.details}}
-        </p>
-      </div>
-
-      <div class="imageDiv" fxFlex>
-        <div fxLayout="col">
-          <div fxFlex="calc(50% -100px)"></div>
-          <div fxFlex>
-            <cl-image *ngIf="item.imageID" quality="auto" fetch_format="auto" width="200" crop="scale" public-id={{item.imageID}}>
-
-            </cl-image>
+  <div fxLayout="row" fxLayout.xs=column>
+    <div fxFlex=70>
+      <mat-card-header>
+        <img *ngIf="getBoatName(item.boatID)" mat-card-avatar src="assets/images/boat_{{item.boatID}}.webp" alt={{getBoatName(item.boatID)}} />
+        <mat-card-title><b>{{getBoatName(item.boatID)}}</b><br /></mat-card-title>
+        <mat-card-subtitle>{{getImportanceName(item.importance)}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <div fxLayout="row" fxLayout.lt-md="column" fxFlex>
+          <div class="breakage-card-left">
+            <ul class="breakage-card-list">
+              <li *ngIf="item.part">
+                <b>Part:</b> {{item.part}}
+              </li>
+              <li>
+                <b>Reported by:</b> {{item.name}}
+              </li>
+              <li>
+                {{item.contact}}
+              </li>
+              <li *ngIf="item.timestamp">
+                <b>Reported:</b> {{dateDisplay(item.timestamp)}}
+              </li>
+              <li *ngIf="item.timestampFixed">
+                <b>Fixed:</b> {{dateDisplay(item.timestampFixed)}}
+              </li>
+            </ul>
           </div>
-          <div fxFlex="calc(50% -100px)"></div>
+
+          <div fxFlex>
+            <p class="breakage-card-details">
+              <b>Details:</b> <br /> {{item.details}}
+            </p>
+          </div>
         </div>
-      </div>
+
+      </mat-card-content>
+
+      <mat-card-actions *ngIf="buttonText">
+        <button mat-button color="warn" (click)="openDialog(item)"><b>{{buttonText}}</b></button>
+      </mat-card-actions>
     </div>
 
+    <div fxFlex>
+      <cl-image mat-card-image *ngIf="item.imageID" quality="auto" fetch_format="auto" width="200" crop="scale" public-id={{item.imageID}}>
+        <cl-transformation if="w_lt_600">
+        </cl-transformation>
+        <cl-transformation effect="blur:400" underlay={{item.imageID}} width="600" crop="scale">
+        </cl-transformation>
+        <cl-transformation if="end">
+        </cl-transformation>
+      </cl-image>
+    </div>
 
-  </mat-card-content>
-  <mat-card-actions *ngIf="buttonText">
-    <button mat-button color="warn" (click)="openDialog(item)"><b>{{buttonText}}</b></button>
-  </mat-card-actions>
-
+  </div>
 </mat-card>
