--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,12 +7,14 @@ mat-toolbar.mat-toolbar {
   padding: 0 16px 0 0;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .3);
 }
+
 .mat-toolbar {
-    min-height: 56px;
+    height:56px;
 }
 .sidenav{
-  margin-top: 56px;
+    margin-top: 56px;
 }
+
 mat-sidenav-container {
   background: #eceff1;
 }
@@ -21,7 +23,7 @@ mat-sidenav-container.app-dark {
   background: #212121;
 }
 .sidenav-content {
-  padding-top:80px;
+  padding-top:64px;
 }
 .toolbar-spacer {
   flex: 1 1 auto;
