improvement: contact info has title only displayed when present

--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -17,8 +17,8 @@
               <li>
                 <b>Reported by:</b> {{item.name}}
               </li>
-              <li>
-                {{item.contact}}
+              <li *ngIf="item.contact">
+                <b>Contact:</b> {{item.contact}}
               </li>
               <li *ngIf="item.timestamp">
                 <b>Reported:</b> {{dateDisplay(item.timestamp)}}
