Feature: display usage for the last month

--- a/src/app/last-uses/last-uses.component.html
+++ b/src/app/last-uses/last-uses.component.html
@@ -1,4 +1,4 @@
-<mat-card fxFlex="100" fxFlex.lt-md="98" class="card_top_pad">
+<mat-card fxFlex="100" fxFlex.lt-md="98" class="card_top_pad card_bottom_pad">
   <mat-card-title>Last Use</mat-card-title>
   <mat-card-content>
     <mat-list>
