--- a/src/app/report-usage/report-usage.component.html
+++ b/src/app/report-usage/report-usage.component.html
@@ -48,4 +48,4 @@
   </mat-card-content>
 </mat-card>
 <last-uses fxLayout="row" fxLayout.lt-md="column"></last-uses>
-<usage-graphs [dataLabel]="'Hours used'" [chartTitle]="'Total Boat Usage'" fxLayout="row" fxLayout.lt-md="column"></usage-graphs>
+<usage-graphs [dataLabel]="'Hours used'" [chartTitle]="'Total Boat Usage'" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px"></usage-graphs>
