tmp fix: scroll positon will reset on route change issue: breaks remembering scroll position

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
     </a>
     </mat-list>
   </mat-sidenav>
-
+  <div id="scrollId"></div>
   <div class="sidenav-content">
     <div fxLayout="row">
       <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
