--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   <span id="menuSpacer"></span>
-  <span><img id="menuLogo" src="assets/images/logoNoText.webp" alt="WYST Logo" /></span>
+  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="WYST Logo" /></span>
   <span id="menuSpacer"></span>
   <span id="menuTitle">
     {{title}}
@@ -26,7 +26,7 @@
 
 <mat-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme">
   <mat-sidenav class="sidenav" #sidenav mode="push">
-    <img id="logo-image-drawer" src="assets/images/logo.webp" alt="WYST Logo" />
+    <img id="logo-image-drawer" src="assets/images/logo.png" alt="WYST Logo" />
     <mat-nav-list>
       <a mat-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="sidenav.close()">
           {{routeLink.label}}
