--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -49,11 +49,6 @@ mat-sidenav-container.app-dark {
   height: 150px;
 }
 
-/deep/ .mat-tab-link {
-  line-height: 28px !important;
-  height: 28px !important;
-}
-
 /deep/ .mat-tab-header {
   color: white !important;
   border-radius: 5px 5px 0px 0px;
@@ -61,6 +56,8 @@ mat-sidenav-container.app-dark {
 
 /deep/ .mat-tab-link {
   font-size: 16px;
+  line-height: 28px !important;
+  height: auto !important;
   opacity: 1 !important;
   color: white !important;
 }
@@ -68,4 +65,30 @@ mat-sidenav-container.app-dark {
 /deep/ .mat-ink-bar {
   background-color: #0077c2 !important;
   min-width: 120px;
+}
+
+.bottom-navigation{
+  position: fixed;
+  bottom: 0;
+  width:100%;
+}
+
+/deep/ .bottom-navigation .mat-tab-link{
+  padding-top: 4px !important;
+  padding-bottom: 2px !important;
+  padding-left: 4px !important;
+  padding-right: 4px !important;
+  color: lightsteelblue !important;
+}
+
+/deep/ .bottom-navigation .mat-tab-label-active{
+  color: white !important;
+}
+
+/deep/ .bottom-navigation .mat-ink-bar {
+  visibility: hidden !important;
+}
+
+/deep/ .mat-drawer-backdrop.mat-drawer-shown{
+  visibility: hidden !important;
 }
