--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme">
-  <mat-sidenav class="sidenav" #sidenav mode="push">
+  <mat-sidenav class="sidenav" #sidenav mode="over">
     <img id="logo-image-drawer" src="assets/images/logo.png" alt="WYST Logo" />
     <mat-nav-list>
       <a mat-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="sidenav.close()">
@@ -53,4 +53,23 @@
       <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
     </div>
   </div>
+
+  <!-- Bottom Navigation Bar -->
+  <div class="bottom-navigation bg-color-primary" fxHide.gt-sm>
+    <nav mat-tab-nav-bar>
+      <a fxFlex="calc(100/routeLinks.length)" mat-tab-link
+          *ngFor="let routeLink of routeLinks; let i = index"
+          [routerLink]="routeLink.link"
+          routerLinkActive #rla="routerLinkActive"
+          [active]="rla.isActive">
+
+            <div fxLayout="column">
+              <div fxFlex><mat-icon svgIcon="{{routeLink.link}}"></mat-icon></div>
+              <div style="margin-top: -10px;" fxFlex>{{routeLink.label}}</div>
+            </div>
+          
+      </a>
+    </nav>
+  </div>
 </mat-sidenav-container>
+
