--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@ mat-toolbar.mat-toolbar {
   left: 0;
   z-index: 10;
   padding: 0 16px 0 0;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .3);
+  /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .3);*/
 }
 
 .mat-toolbar {
@@ -59,7 +59,7 @@ mat-sidenav-container.app-dark {
   line-height: 28px !important;
   height: auto !important;
   opacity: 1 !important;
-  color: white !important;
+  color: lightsteelblue !important;
 }
 
 /deep/ .mat-ink-bar {
@@ -71,6 +71,7 @@ mat-sidenav-container.app-dark {
   position: fixed;
   bottom: 0;
   width:100%;
+  z-index: 10;
 }
 
 /deep/ .bottom-navigation .mat-tab-link{
@@ -89,6 +90,9 @@ mat-sidenav-container.app-dark {
   visibility: hidden !important;
 }
 
+/deep/ .app-dark .mat-drawer-backdrop.mat-drawer-shown{
+  background: none;
+}
 /deep/ .mat-drawer-backdrop.mat-drawer-shown{
-  visibility: hidden !important;
+  background: none;
 }
