--- a/src/app/shared/standard-secondary-route/standard-secondary-route.css
+++ b/src/app/shared/standard-secondary-route/standard-secondary-route.css
@@ -2,6 +2,8 @@ mat-toolbar.mat-toolbar {
     height: auto !important;
     padding: 0 0 0 0;
     margin-bottom: 8px;
+    z-index: 10;
+    position:relative
 }
 
 /deep/ .mat-tab-header {
@@ -23,4 +25,16 @@ mat-toolbar.mat-toolbar {
 /deep/ .mat-ink-bar {
     background-color: #0077c2 !important;
     min-width: 120px;
+}
+
+.fullscreen
+{
+    position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
