--- a/src/app/shared/standard-secondary-route/standard-secondary-route.html
+++ b/src/app/shared/standard-secondary-route/standard-secondary-route.html
@@ -1,20 +1,26 @@
-<mat-toolbar style="margin-top:-8px;" color="primary">
-    <span></span>
-    <nav fxFlex style="width:100%;" mat-tab-nav-bar>
-        <a style="width:33%;" mat-tab-link
-            *ngFor="let routeLink of routeLinks; let i = index"
-            [routerLink]="routeLink.link"
-            routerLinkActive #rla="routerLinkActive"
-            [active]="rla.isActive">
-           {{routeLink.label}}         
-        </a>
-    </nav>
-    <span></span>
-</mat-toolbar>
-<div fxLayout="row">
-    <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
-    <div fxFlex.gt-lg="1280px" fxFlex>
-        <router-outlet></router-outlet>
+<div (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)">
+    <mat-toolbar style="margin-top:-8px;" color="primary">
+        <span id="scrollID"></span>
+        <nav fxFlex style="width:100%;" mat-tab-nav-bar>
+            <a style="width:33%;" mat-tab-link
+                *ngFor="let routeLink of routeLinks; let i = index"
+                [routerLink]="routeLink.link"
+                routerLinkActive #rla="routerLinkActive"
+                [active]="rla.isActive">
+            {{routeLink.label}}         
+            </a>
+        </nav>
+        <span></span>
+    </mat-toolbar>
+    <div fxLayout="row">
+        <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
+        <div fxFlex.gt-lg="1280px" fxFlex>
+            <main [@routerTransition]="getState(o)"  class="content">
+                <router-outlet #o="outlet"></router-outlet>
+            </main>
+        </div>
+        <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
     </div>
-    <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
 </div>
+
+<div class="fullscreen" (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)"></div>
