smoother animation as no longer resizes

--- a/src/app/view-docs/safety-docs/safety-docs.component.html
+++ b/src/app/view-docs/safety-docs/safety-docs.component.html
@@ -1,11 +1,15 @@
-<mat-card>
-  <mat-list>
-    <h3 mat-subheader>Health and Safety Documents</h3>
-    <mat-list-item *ngFor="let link of links">
-      <a mat-list-item href="{{link.url}}" target="_blank">
-        <mat-icon mat-list-icon>insert_drive_file</mat-icon>
-        {{link.title}}
-      </a>
-    </mat-list-item>
-  </mat-list>
-</mat-card>
+<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div fxFlex.gt-lg="1280px" fxFlex>
+  <mat-card>
+    <mat-list>
+      <h3 mat-subheader>Health and Safety Documents</h3>
+      <mat-list-item *ngFor="let link of links">
+        <a mat-list-item href="{{link.url}}" target="_blank">
+          <mat-icon mat-list-icon>insert_drive_file</mat-icon>
+          {{link.title}}
+        </a>
+      </mat-list-item>
+    </mat-list>
+  </mat-card>
+</div>
+<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
