--- a/src/app/shared/standard-secondary-route/standard-secondary-route.css
+++ b/src/app/shared/standard-secondary-route/standard-secondary-route.css
@@ -1,6 +1,7 @@
 mat-toolbar.mat-toolbar {
     height: auto !important;
     padding: 0 0 0 0;
+    padding-top: 2px;
     margin-bottom: 8px;
     z-index: 10;
     position:relative
