--- a/src/app/shared/standard-secondary-route/standard-secondary-route.html
+++ b/src/app/shared/standard-secondary-route/standard-secondary-route.html
@@ -1,6 +1,7 @@
 <div (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)">
-    <mat-toolbar style="margin-top:-8px;" color="primary">
-        <span id="scrollID"></span>
+    <div id="scrollId"></div>
+    <mat-toolbar style="margin-top:-10px;" color="primary">
+        <span></span>
         <nav fxFlex style="width:100%;" mat-tab-nav-bar>
             <a style="width:33%;" mat-tab-link
                 *ngFor="let routeLink of routeLinks; let i = index"
@@ -11,16 +12,10 @@
             </a>
         </nav>
         <span></span>
-    </mat-toolbar>
-    <div fxLayout="row">
-        <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
-        <div fxFlex.gt-lg="1280px" fxFlex>
-            <main [@routerTransition]="getState(o)"  class="content">
-                <router-outlet #o="outlet"></router-outlet>
-            </main>
-        </div>
-        <div fxFlex.gt-lg="calc(50% -1000px)" fxFlex="20" fxFlex.lt-md="2"></div>
-    </div>
+    </mat-toolbar>        
+        <main [@routerTransition]="getState(o)"  class="content">
+            <router-outlet #o="outlet"></router-outlet>
+        </main>
 </div>
 
 <div class="fullscreen" (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)"></div>
