--- a/src/app/view-report/report-incident/report-incident.component.html
+++ b/src/app/view-report/report-incident/report-incident.component.html
@@ -1,3 +1,7 @@
-<mat-card>
-    <iframe src="https://docs.google.com/forms/d/1VLbHfnZCpuFi_b6qs1cLrq8XHI959nsuj3riBhBVbiE/viewform?embedded=true" width="100%" height="3200" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-</mat-card>
+<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div fxFlex.gt-lg="1280px" fxFlex>
+        <mat-card>
+                <iframe src="https://docs.google.com/forms/d/1VLbHfnZCpuFi_b6qs1cLrq8XHI959nsuj3riBhBVbiE/viewform?embedded=true" width="100%" height="3200" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            </mat-card>
+</div>
+<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
