--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,9 @@
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
 }
+
+@media (max-width: 959px) {
+	::-webkit-scrollbar {
+		display: none;
+	}
+  }
