--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,9 +43,9 @@
     </a>
     </mat-list>
   </mat-sidenav>
-  <div id="scrollId"></div>
-  <div class="sidenav-content">
-    <router-outlet></router-outlet>
+ 
+  <div id="scrollId" class="sidenav-content">
+    <router-outlet ></router-outlet>
   </div>
 
   <!-- Bottom Navigation Bar -->
