fix: not calculating bottom navigation item width

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
   <!-- Bottom Navigation Bar -->
     <div class="bottom-navigation bg-color-primary" fxHide.gt-sm>
       <nav mat-tab-nav-bar>
-        <a fxFlex="calc(100/routeLinks.length)" mat-tab-link
+        <a fxFlex="calc(100%/{{routeLinks.length}})" mat-tab-link
             *ngFor="let routeLink of routeLinks; let i = index"
             [routerLink]="routeLink.link"
             routerLinkActive #rla="routerLinkActive"
