improved print layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
   </mat-sidenav>
  
   <div id="scrollId" class="sidenav-content">
-    <router-outlet ></router-outlet>
+   <div id="section-to-print"><router-outlet></router-outlet></div>
   </div>
 
   <!-- Bottom Navigation Bar -->
