--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,9 +33,9 @@
       </a>
     </mat-nav-list>
     <br />
-    <button mat-button (click)="toggleDark(); sidenav.close();">TOGGLE DARK THEME</button>
+    <button mat-button class="nav-button" (click)="toggleDark(); sidenav.close();">TOGGLE DARK THEME</button>
     <br />
-    <button mat-button (click)="sidenav.close(); print();">PRINT</button>
+    <button mat-button class="nav-button" (click)="sidenav.close(); print();">PRINT</button>
     <mat-list style="position: relative; height: auto; padding-top:64px">
       <a style="text-decoration: none;" href="https://laserflash.tk/" mat-list-item>
       ©2017 BrynTBennett
