better print support for all routes

--- a/src/app/view-docs/boat-parts/boat-parts.component.html
+++ b/src/app/view-docs/boat-parts/boat-parts.component.html
@@ -1,7 +1,7 @@
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
 <div fxFlex.gt-lg="1280px" fxFlex>
-    <mat-card>
+    <mat-card class="form">
         <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSa7dSZ-_aOo2jNmuiq-GLSNQTTfj_5ScggsbAD-0xXPhq0j7gxTLdMFqSApR47bZ7xncgJ8-nzJLT/pubhtml?widget=true&amp;headers=false" width="100%" height="1000px"></iframe>
     </mat-card>
 </div>
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
