--- a/src/app/view-docs/safety-docs/safety-docs.component.html
+++ b/src/app/view-docs/safety-docs/safety-docs.component.html
@@ -1,6 +1,6 @@
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
 <div fxFlex.gt-lg="1280px" fxFlex>
-  <mat-card>
+  <mat-card class="form">
     <mat-list>
       <h3 mat-subheader>Health and Safety Documents</h3>
       <mat-list-item *ngFor="let link of links">
@@ -12,4 +12,4 @@
     </mat-list>
   </mat-card>
 </div>
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
