--- a/src/app/view-report/report-usage/report-usage.component.html
+++ b/src/app/view-report/report-usage/report-usage.component.html
@@ -1,6 +1,6 @@
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
 <div fxFlex.gt-lg="1280px" fxFlex>
-  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px" class="card_bottom_pad">
+  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px" class="card_bottom_pad content">
     <div fxFlex="60" fxLayout.lt-md="98">
       <mat-card fxFlex>
         <mat-card-title>{{title}}</mat-card-title>
@@ -56,4 +56,4 @@
   </div>
   <usage-graphs [dataLabel]="'Hours used'" [chartTitle]="'Total Boat Usage'" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px"></usage-graphs>
 </div>
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
