--- a/src/app/view-report/report-issue/report-issue.component.html
+++ b/src/app/view-report/report-issue/report-issue.component.html
@@ -4,7 +4,7 @@
     <h2>{{title}}</h2>
     <mat-card-content>
       <form (ngSubmit)="onSubmit()" [formGroup]="breakageForm">
-        <mat-vertical-stepper #stepper formArrayName="formArray" linear>
+        <mat-vertical-stepper #stepper formArrayName="formArray" [linear]="isLinear">
           <mat-step formGroupName="0" [stepControl]="breakageForm.get('formArray').get([0])">
             <ng-template matStepLabel>Fill out your name</ng-template>
 
@@ -56,13 +56,13 @@
               </mat-select>
             </mat-form-field>
 
-            <mat-input-container class="full-width">
+            <mat-form-field matInput class="full-width">
               <textarea matInput type="text" placeholder="Describe the Issue" formControlName="details" #details required rows="4" maxlength="256"> </textarea>
               <mat-hint align="end">{{details.value.length}} / 256</mat-hint>
               <mat-error *ngIf="formErrors.details">
                 {{formErrors.details}}
               </mat-error>
-            </mat-input-container>
+            </mat-form-field>
             <br />
             <button mat-button matStepperPrevious type="button">Back</button>
             <button mat-button matStepperNext type="button">Next</button>
@@ -89,7 +89,9 @@
 
           <mat-step>
             <ng-template matStepLabel>Check Entry</ng-template>
+
             <breakage-card [breakages]="breakage"></breakage-card>
+
             <br />
             <button mat-button matStepperPrevious type="button">Back</button>
             <button mat-raised-button color="accent" type="submit">Submit</button>
@@ -100,7 +102,9 @@
 
     </mat-card-content>
   </mat-card>
+
   <mat-progress-bar mode="indeterminate" *ngIf="breakages.length <= 0"></mat-progress-bar>
   <breakage-card [breakages]="breakages"></breakage-card>
+
 </div>
 <div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
