--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   <span id="menuSpacer"></span>
-  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="WYST Logo" /></span>
+  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="NPYC Logo" /></span>
   <span id="menuSpacer"></span>
   <span id="menuTitle">
     {{title}}
@@ -26,7 +26,7 @@
 
 <mat-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme" >
   <mat-sidenav class="sidenav noPrint" #sidenav mode="over">
-    <img id="logo-image-drawer" src="assets/images/logo.png" alt="WYST Logo" />
+    <img id="logo-image-drawer" src="assets/images/logo.png" alt="NPYC Logo" />
     <mat-nav-list>
       <a mat-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="sidenav.close()">
           {{routeLink.label}}
@@ -40,7 +40,7 @@
       <a style="text-decoration: none;" href="https://laserflash.tk/" mat-list-item>
       ©2017 BrynTBennett
     </a>
-      <a style="text-decoration: none;" href="https://github.com/LaserFlash/WYST-Maintenance" mat-list-item>
+      <a style="text-decoration: none;" href="https://github.com/LaserFlash/NPYC-Maintenance" mat-list-item>
       <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> &nbsp; Source Code
     </a>
     </mat-list>
