--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
-$primary: mat-palette($mat-blue, 600);
-$accent:  mat-palette($mat-blue);
+$primary: mat-palette($mat-lime, 900);
+$accent:  mat-palette($mat-lime);
 $warn:    mat-palette($mat-red);
 
 $theme:  mat-light-theme($primary, $accent, $warn);
@@ -9,8 +9,8 @@ $theme:  mat-light-theme($primary, $accent, $warn);
 @include angular-material-theme($theme);
 
 .app-dark {
-  $dark-primary: mat-palette($mat-blue, 600);
-  $dark-accent:  mat-palette($mat-blue);
+  $dark-primary: mat-palette($mat-lime, 900);
+  $dark-accent:  mat-palette($mat-lime);
   $dark-warn:    mat-palette($mat-yellow);
 
   $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
